Bug 961280 - Prevent the APZ repaint request from clobbering a layout-driven async scroll. r=tn